<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".LoginActivity">

    <ImageView

        android:id="@+id/imageView"
        android:layout_width="169dp"
        android:layout_height="163dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_launcher_round" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="25dp">






        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#23759E"
            android:gravity="center_horizontal"
            android:layout_marginVertical="16dp"/>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInEmailTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInPasswordTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:background="@drawable/button_bg"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:layout_marginTop="12dp"/>


        <TextView
            android:id="@+id/signInErrorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/error_view"
            android:layout_marginTop="12dp"/>

        <Button
            android:layout_marginTop="12dp"
            android:id="@+id/verifyEmailAgainButton"
            android:layout_width="match_parent"
            android:background="@drawable/button_bg"
            android:layout_height="wrap_content"
            android:text="@string/email_verify_again" />



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_registered_yet"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvRegisterHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/register_here"
                android:textColor="#23759E"
                android:textStyle="bold"
                android:textSize="20sp"/>

        </LinearLayout>


        <TextView
            android:layout_gravity="center"
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/or"
            android:textColor="#23759E"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tvClickHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/click_here"
                android:textColor="#23759E"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>