<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_layout"
            android:textColor="@android:color/white"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_user"
                android:contentDescription="@string/todo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Add_Contact_Firs_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp">

                <EditText
                    android:id="@+id/First_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/first_name"
                    android:importantForAutofill="no"
                    tools:ignore="TextFields" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_user" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Add_Contact_Last_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                tools:ignore="RtlHardcoded">

                <EditText
                    android:id="@+id/Last_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/last_name"
                    android:importantForAutofill="no"
                    tools:ignore="TextFields" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_phone"
                android:contentDescription="@string/todo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_contact_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                tools:ignore="RtlHardcoded">

                <EditText
                    android:id="@+id/Phone_Number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/mobile_phone"
                    android:inputType="number"
                    tools:ignore="TextFields"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_email"
                android:contentDescription="@string/todo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_contact_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                tools:ignore="RtlHardcoded">

                <EditText
                    android:id="@+id/Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_address"
                android:contentDescription="@string/todo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Add_Contact_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                tools:ignore="RtlHardcoded">

                <EditText
                    android:id="@+id/Address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/address"
                    android:importantForAutofill="no"
                    tools:ignore="TextFields" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/Add_Contact_Cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/Add_Contact_Save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>